# rs-ex-2

./: Cargo.toml
src/: iniparser.rs  main.rs
