[package]
name = "auto-svn-package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.26.0"
structopt = "0.3.25"
ureq = "2.4.0"
serde = { version = "1.0.133", features = ["derive"] }
toml = "0.5.8"
serde_derive = "1.0.133"
dirs = "1.0.4"
url = "2.2.2"
